# mockk

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  ALINA.md  ANDROID.md  BACKLOG.md  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  COUNTLESS_EXAMPLES.md  DEPRECATED.md  DEVELOPMENT.md  KOTLIN13.md  LICENSE  MAINTAING.md  MAINTAINING.md  MASHA.md  MATRIX.md  README.md  SECURITY.md  _config.yml  backlog.txt  build.gradle  build.gradle.kts  ci-gradle.properties  circle.yml  emulator.sh  gradle.properties  jitpack.yml  local.properties  mockk-backlog.txt  package-lock.json  package.json  pnpm-lock.yaml  send-out-replies.md  settings.gradle  settings.gradle.kts  sitemap.xml  (+6 more)
.github/: FUNDING.yml  issue_template.md  stale.yml  tech-lead.agent.md
KotlinCMakeModule/: CMakeKotlinInformation.cmake  version
_includes/: google-analytics.html  og.html
_layouts/: default.html
agent/: build.gradle  gradle.properties
android-agent/: CMakeLists.txt  README.txt
android-agent/src/main/: AndroidManifest.xml
android-agent/src/main/java/io/mockk/agent/android/: ClassTransformer.java  IllegalClassFormatException.java  InvocationHandlerAdapter.java  MockFeatures.java  MockMaker.java
buildSrc/: android-sdk-detector.settings.gradle.kts  build.gradle.kts  repositories.settings.gradle.kts  settings.gradle.kts
cloud-badge/: index.js  package.json
common/: build.gradle
doc/: font.txt  infographics-2000-stars.xcf  stats-shared.xcf
docs/: index.md
dsl/: CMakeLists.txt  build.gradle
example/: build.gradle  pom.xml  settings.gradle
gradle/: jacoco.gradle  (+13 more)
(+1642 files in other folders)
